<resources>
    <string name="qty_prompt">Qty</string>

    <string-array name="qty_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="itemInputHint">Item to add&#8230;</string>
    <string name="emptyList">Your items will appear here&#8230;</string>
    <string name="product_action_delete">Delete</string>
    <string name="product_action_edit">Edit</string>

    <string name="nav_drawer_myLists">My Lists</string>
    <string name="nav_drawer_addList">Add List</string>
    <string name="nav_drawer_settings">Settings</string>

    <string name="lisman_name">My lists</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="date_not_found">(date missing)</string>
    <string name="date_year">year ago</string>
    <string name="date_month">month ago</string>
    <string name="date_day">day ago</string>
    <string name="date_hour">hour ago</string>
    <string name="date_minute">minute ago</string>
    <string name="date_years">years ago</string>
    <string name="date_months">months ago</string>
    <string name="date_days">days ago</string>
    <string name="date_hours">hours ago</string>
    <string name="date_minutes">minutes ago</string>
    <string name="date_just_now">Just now</string>
    <string name="title_activity_settings">Settings</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="edit_product_heading">Edit product</string>
    <string name="edit_product_hint">New product name here&#8230;</string>

    <string name="diag_delete_confirm_title">Confirmation</string>
    <string name="diag_delete_confirm_text">This will empty the entire list. Continue?</string>
    <string name="diag_delete_confirm_yes">Yes</string>
    <string name="diag_delete_confirm_no">Cancel</string>

    <string name="snackbar_text_single">item deleted</string>
    <string name="snackbar_text_plural">items deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_restored">Item deletion undone</string>

    <!-- String related to accessability: -->
    <string name="access_add_item">Add</string>

    <!-- Strings related to Settings -->
    <string name="settings_show_qty_field_title">Quantity field</string>
    <string name="settings_show_qty_field_summary">Enables you to assign quantities when adding items</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
