<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.junkiesoup.shoppinglist.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginRight="@dimen/general_margin"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginBottom="0dp">

            <EditText
                android:id="@+id/itemInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:shadowColor="@color/colorPrimary"
                android:hint="@string/itemInputHint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textAutoCorrect"/>
            <ImageButton
                android:id="@+id/addButton"
                android:src="@drawable/ic_add_item"
                android:background="#00ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:contentDescription="@string/access_add_item"/>
        </LinearLayout>
        <TextView
            android:id="@+id/emptyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/general_margin"
            android:text="@string/emptyList"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"></ListView>

    </LinearLayout>
</LinearLayout>
